BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Affiliation_vod__c.object
<CustomObject>
    <description>This object stores affiliations between person accounts, business accounts, and contacts. When an affiliation (A-&gt;B) is inserted, the opposite affiliation (B-&gt;A) is automatically created via a trigger.</description>
    <fields>
        <fullName>Account_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT(From_Account_vod__r.Account_Source_Country_BMS_CORE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Source Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_affiliation_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to complementary affiliation.</description>
        <label>Child Affiliation</label>
        <referenceTo>Affiliation_vod__c</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliation_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments_vod__c</fullName>
        <description>User entered comments about affiliation.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disable_Trigger_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true then the affiliation triggers will not update the mirror affiliation.</description>
        <label>Disable Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id that is populated by a Veeva Trigger.   The field is populate on insert\update with a composite index of rom_Account_vod__c + &apos;:&apos; + From_Contact_vod__c + &apos;:&apos; + To_Account_vod__c + &apos;:&apos;  + To_Contact_vod__c + &apos;:&apos; Role_vod__c.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account that is the source of the affiliation. Exactly one of from_account or from_contact must be non blank.</description>
        <label>From Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliations (From Account)</relationshipLabel>
        <relationshipName>Affiliation_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account that is the source of the affiliation. Exactly one of from_account or from_contact must be non blank.</description>
        <label>From Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Affiliations (From Contact)</relationshipLabel>
        <relationshipName>Affiliation_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Influence_vod__c</fullName>
        <description>Influence that the source of the affiliation has on the target.</description>
        <label>Influence</label>
        <picklist>
            <picklistValues>
                <fullName>No influence</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Has influence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Is influenced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field used to track the first of the two affiliation records created.</description>
        <label>Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Strength_vod__c</fullName>
        <description>The line thickness is based on the value chosen in this picklist. Values range from 0-2 where null is treated like a 0.</description>
        <label>Relationship Strength</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_vod__c</fullName>
        <description>The role that the source of the affiliation plays at the target.</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Affiliated with</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Access Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_vod__c</fullName>
        <description>The therapeutic area of the affiliation. An affiliation can have one to many therapeutic areas. This is not required but can be set to Read Only for filtering purposes only.</description>
        <label>Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatrics</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>To_Account_Affiliation_Count_vod__c</fullName>
        <description>The total number of affiliations that the To Account has.</description>
        <label>To Account Affiliation Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Account_Identifier_vod__c</fullName>
        <description>The Account Identifier of the To Account. Should default to show the value of Account.Account_Identifier_vod__c. Off by default.</description>
        <formula>To_Account_vod__r.Account_Identifier_vod__c</formula>
        <label>To Account Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Account_Name_vod__c</fullName>
        <description>The Account Name of the To Account. Defaults to the same formula on Account.Formatted_Name.</description>
        <formula>To_Account_vod__r.Formatted_Name_vod__c</formula>
        <label>To Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Account_Record_Type_vod__c</fullName>
        <description>The Record Type of the To Account. The Record Type is required in order to see the record type icon for the account.</description>
        <formula>CASESAFEID(To_Account_vod__r.RecordTypeId)</formula>
        <label>To Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the target of the affiliation. Exactly one of to_account or to_contact must be non blank.</description>
        <label>To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliations (To Account)</relationshipLabel>
        <relationshipName>Affiliation_vod1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the target of the affiliation. Exactly one of to_account or to_contact must be non blank.</description>
        <label>To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Affiliations (To Contact)</relationshipLabel>
        <relationshipName>Affiliation_vod1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>destroy_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field.  This is used by the update trigger to delete the affiliation (and its child or parent) regardless of the owner of the affiliation.   Without this trigger users can only delete affiliations that they create or affiliations that are owned by those lower in the role hierarchy. When the Sphere of influence wants to delete an affiliation, it uses this destroy field rather than a delete API call.</description>
        <label>Destroy</label>
        <type>Checkbox</type>
    </fields>
    <label>Affiliation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AffiliationNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DUP_TO_FROM_ACCOUNT</fullName>
        <active>true</active>
        <description>Prevents self referencing affiliations.</description>
        <errorConditionFormula>AND(To_Account_vod__c = From_Account_vod__c, To_Account_vod__c &lt;&gt; null)</errorConditionFormula>
        <errorMessage>To Account cannot be the same as From Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DUP_TO_FROM_CONTACT</fullName>
        <active>true</active>
        <description>Prevents self referencing affiliations.</description>
        <errorConditionFormula>AND(To_Contact_vod__c = From_Contact_vod__c, To_Contact_vod__c &lt;&gt; null)</errorConditionFormula>
        <errorMessage>To Contact cannot be the same as From Contact</errorMessage>
    </validationRules>
</CustomObject>